--- a/k8s/podinfo/podinfo-kustomization.yaml
+++ b/k8s/podinfo/podinfo-kustomization.yaml
@@ -7,6 +7,7 @@ spec:
   interval: 5m0s
   path: ./kustomize
   prune: true
+  targetNamespace: kube-system
   sourceRef:
     kind: GitRepository
     name: podinfo
