app config add ingress

--- a/k8s/podinfo/podinfo-kustomization.yaml
+++ b/k8s/podinfo/podinfo-kustomization.yaml
@@ -11,3 +11,11 @@ spec:
   sourceRef:
     kind: GitRepository
     name: podinfo
+  ingress:
+    enabled: true
+    className: ""
+    hosts:
+      - host: podinfo.tasenko.ru
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
