--- a/k8s/podinfo/podinfo-source.yaml
+++ b/k8s/podinfo/podinfo-source.yaml
@@ -1,5 +1,5 @@
 apiVersion: source.toolkit.fluxcd.io/v1
-kind: GitRepository
+kind: HelmRepository
 metadata:
   name: podinfo
   namespace: flux-system
@@ -7,4 +7,4 @@ spec:
   interval: 30s
   ref:
     branch: master
-  url: https://github.com/stefanprodan/podinfo
+  url: https://stefanprodan.github.io/podinfo
