--- a/k8s/podinfo/podinfo-value-overrides.yaml
+++ b/k8s/podinfo/podinfo-value-overrides.yaml
@@ -14,10 +14,10 @@ data:
     backend: #http://backend-podinfo:9898/echo
     backends: []
 
-    image:
-      repository: ghcr.io/stefanprodan/podinfo
-      tag: 6.0.3
-      pullPolicy: IfNotPresent
+    #image:
+    #  repository: ghcr.io/stefanprodan/podinfo
+    #  tag: 6.0.3
+    #  pullPolicy: IfNotPresent
 
     # failure conditions
     faults:
