--- a/k8s/ingress/ingress-source.yaml
+++ b/k8s/ingress/ingress-source.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: ingress-nginx
-  namespace: default
+  namespace: ingress-nginx
 spec:
   interval: 1m0s
   url: https://kubernetes.github.io/ingress-nginx
