--- a/k8s/infrastructure/issuers/letsencrypt-wildcard-kustomization.yaml
+++ b/k8s/infrastructure/issuers/letsencrypt-wildcard-kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: letsencrypt-wildcard-cert
-  namespace: letsencrypt-wildcard
+  namespace: cert-manager
 spec:
   interval: 15m
   dependsOn:
