--- a/k8s/infrastructure/issuers/cluster-issuer-letsencrypt-prod.yaml
+++ b/k8s/infrastructure/issuers/cluster-issuer-letsencrypt-prod.yaml
@@ -12,6 +12,7 @@ spec:
     - selector:
         dnsZones:
           - "tasenko.ru"
+          - "nginx.tasenko.ru"
       dns01:
         cloudflare:
           apiTokenSecretRef:
