--- a/k8s/apps/podinfo/podinfo-kuztomization.yaml
+++ b/k8s/apps/podinfo/podinfo-kuztomization.yaml
@@ -1,15 +1,17 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: letsencrypt-wildcard-cert
-  namespace: cert-manager
+  name: podinfo
+  namespace: podinfo
 spec:
-  interval: 15m
-  dependsOn:
-  - name: "cert-manager"
-  - name: "sealed-secrets"
+  interval: 5m
   prune: true # remove any elements later removed from the above path
   timeout: 2m # if not set, this defaults to interval duration, which is 1h
   sourceRef:
     kind: GitRepository
-    name: cert-manager
+    name: podinfo
+  healthChecks:
+    - apiVersion: apps/v1
+      kind: Deployment
+      name: podinfo
+      namespace: podinfo
