--- a/k8s/infrastructure/issuers/cluster-issuer-letsencrypt-prod.yaml
+++ b/k8s/infrastructure/issuers/cluster-issuer-letsencrypt-prod.yaml
@@ -9,12 +9,6 @@ spec:
     privateKeySecretRef:
       name: letsencrypt-prod
     solvers:
-    - selector:
-        dnsZones:
-          - "tasenko.ru"
-          - "nginx.tasenko.ru"
-      dns01:
-        cloudflare:
-          apiTokenSecretRef:
-            name: cloudflare-api-token
-            key: apiToken
+    - http01:
+        ingress:
+          ingressClassName: nginx
