change issuers, change podinfo, I understand KUSTOMIZATIONgit add *git add *vi test.sh

--- a/k8s/apps/podinfo/podinfo-source.yaml
+++ b/k8s/apps/podinfo/podinfo-source.yaml
@@ -6,3 +6,12 @@ metadata:
 spec:
   interval: 30s
   url: https://stefanprodan.github.io/podinfo
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: GitRepository
+metadata:
+  name: podinfo
+  namespace:
+spec:
+  interval: 5m
+  url: https://github.com/netology-diploma/diploma-test
