--- a/k8s/infrastructure/issuers/letsencrypt-kustomization.yaml
+++ b/k8s/infrastructure/issuers/letsencrypt-kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: letsencrypt-issuers
-  namespace: cert-manager
+  name: letsencrypt-issuer
+  namespace: cluster-issuer
 spec:
   interval: 15m
   dependsOn:
@@ -12,4 +12,4 @@ spec:
   timeout: 2m # if not set, this defaults to interval duration, which is 1h
   sourceRef:
     kind: GitRepository
-    name: cert-manager
+    name: cluster-issuer
