--- a/k8s/apps/podinfo/podinfo-source.yaml
+++ b/k8s/apps/podinfo/podinfo-source.yaml
@@ -11,7 +11,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
   name: podinfo
-  namespace:
+  namespace: podinfo
 spec:
   interval: 5m
   url: https://github.com/netology-diploma/diploma-test
