--- a/k8s/infrastructure/issuers/cluster-issuer-source.yaml
+++ b/k8s/infrastructure/issuers/cluster-issuer-source.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
   name: cluster-issuer
-  namespace:
+  namespace: cluster-issuer
 spec:
   interval: 5m
   url: https://github.com/netology-diploma/diploma-test
