--- a/k8s/apps/podinfo/podinfo-release.yaml
+++ b/k8s/apps/podinfo/podinfo-release.yaml
@@ -18,13 +18,13 @@ spec:
   values:
     ingress:
       enabled: true
-      className: nginx
+      className: "nginx"
       annotations:
         kubernetes.io/ingress.class: nginx
         nginx.ingress.kubernetes.io/rewrite-target: /
         cert-manager.io/cluster-issuer: letsencrypt-staging
       hosts:
-        - host: podinfo.tasenko.ru
+        - host: "podinfo.tasenko.ru"
     tls:
     - secretName: letsencrypt-staging
       hosts:
