--- a/k8s/apps/podinfo/podinfo-release.yaml
+++ b/k8s/apps/podinfo/podinfo-release.yaml
@@ -25,6 +25,8 @@ spec:
         cert-manager.io/cluster-issuer: letsencrypt-staging
       hosts:
         - host: "podinfo.tasenko.ru"
+          paths:
+            path: /
     tls:
     - secretName: letsencrypt-staging
       hosts:
