--- a/k8s/apps/podinfo/podinfo-release.yaml
+++ b/k8s/apps/podinfo/podinfo-release.yaml
@@ -24,10 +24,8 @@ spec:
         nginx.ingress.kubernetes.io/rewrite-target: /
         cert-manager.io/cluster-issuer: letsencrypt-staging
       hosts:
-        - host: "podinfo.tasenko.ru"
-          paths:
-            path: /
-  #  tls:
-  #  - secretName: letsencrypt-staging
-  #    hosts:
-  #      - podinfo.tasenko.ru
+        - host: podinfo.tasenko.ru
+      tls:
+      - secretName: letsencrypt-staging
+        hosts:
+        - podinfo.tasenko.ru
