--- a/k8s/apps/podinfo/podinfo-release.yaml
+++ b/k8s/apps/podinfo/podinfo-release.yaml
@@ -23,6 +23,8 @@ spec:
         kubernetes.io/ingress.class: nginx
         nginx.ingress.kubernetes.io/rewrite-target: /
         cert-manager.io/cluster-issuer: letsencrypt-prod
+      hosts:
+        - host: podinfo.tasenko.ru
       tls:
         - hosts:
             - podinfo.tasenko.ru
