--- a/k8s/infrastructure/monitoring/kube-prometheus/kube-prometheus-source.yaml
+++ b/k8s/infrastructure/monitoring/kube-prometheus/kube-prometheus-source.yaml
@@ -1,8 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+kind: GitRepository
 metadata:
-  name: cert-manager
-  namespace: cert-manager
+  name: kube-prometheus
+  namespace: monitoring
 spec:
   interval: 24h
-  url: https://charts.jetstack.io
+  url: https://github.com/prometheus-operator/kube-prometheus
