--- a/k8s/infrastructure/monitoring/kube-prometheus/kube-prometheus-kustomization.yaml
+++ b/k8s/infrastructure/monitoring/kube-prometheus/kube-prometheus-kustomization.yaml
@@ -8,7 +8,7 @@ spec:
   targetNamespace: monitoring
   sourceRef:
     kind: GitRepository
-    name: monitoring
+    name: kube-prometheus
   path: "manifests/setup"
   prune: true
   timeout: 1m
