--- a/k8s/infrastructure/monitoring/grafana/grafana-source.yaml
+++ b/k8s/infrastructure/monitoring/grafana/grafana-source.yaml
@@ -1,8 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: prometheus
+  name: grafana
   namespace: monitoring
 spec:
   interval: 24h
-  url: https://prometheus-community.github.io/helm-charts
+  url: https://grafana.github.io/helm-charts
