--- a/k8s/infrastructure/monitoring/grafana/grafana-release.yaml
+++ b/k8s/infrastructure/monitoring/grafana/grafana-release.yaml
@@ -13,3 +13,20 @@ spec:
         kind: HelmRepository
         name: grafana
         namespace: monitoring
+  values:
+    ingress:
+      enabled: true
+      className: "nginx"
+      annotations:
+        kubernetes.io/ingress.class: nginx
+        nginx.ingress.kubernetes.io/rewrite-target: /
+        cert-manager.io/cluster-issuer: letsencrypt-prod
+      tls:
+        - hosts:
+            - grafana.tasenko.ru
+          secretName: letsencrypt-prod
+      hosts:
+        - host: grafana.tasenko.ru
+          paths:
+            - path: /
+              pathType: ImplementationSpecific
