change kube-prometheus chart

--- a/k8s/infrastructure/monitoring/prometheus/prometheus-source.yaml
+++ b/k8s/infrastructure/monitoring/prometheus/prometheus-source.yaml
@@ -1,8 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+kind: OCIRepository
 metadata:
-  name: prometheus
+  name: kube-prometheus
   namespace: monitoring
 spec:
   interval: 24h
-  url: https://prometheus-community.github.io/helm-charts
+  url: oci://registry-1.docker.io/bitnamicharts/kube-prometheus
