--- a/k8s/infrastructure/monitoring/prometheus/prometheus-release.yaml
+++ b/k8s/infrastructure/monitoring/prometheus/prometheus-release.yaml
@@ -1,15 +1,15 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: prometheus
+  name: kube-prometheus
   namespace: monitoring
 spec:
-  releaseName: prometheus
+  releaseName: kube-prometheus
   interval: 15m
   chart:
     spec:
-      chart: prometheus
+      chart: kube-prometheus
       sourceRef:
-        kind: HelmRepository
-        name: prometheus
+        kind: OCIRepository
+        name: kube-prometheus
         namespace: monitoring
