--- a/k8s/infrastructure/issuers/cluster-issuer-letsencrypt-prod.yaml
+++ b/k8s/infrastructure/issuers/cluster-issuer-letsencrypt-prod.yaml
@@ -3,6 +3,8 @@ kind: ClusterIssuer
 metadata:
   name: letsencrypt-prod
 spec:
+  dependsOn:
+    - name: cert-manager
   acme:
     email: a@tasenko.ru
     server: https://acme-v02.api.letsencrypt.org/directory
