add more dependson

--- a/k8s/infrastructure/controllers/cert-manager/cert-manager-release.yaml
+++ b/k8s/infrastructure/controllers/cert-manager/cert-manager-release.yaml
@@ -4,6 +4,8 @@ metadata:
   name: cert-manager
   namespace: cert-manager
 spec:
+  dependsOn:
+    - name: external-dns
   releaseName: cert-manager
   interval: 15m
   chart:
