--- a/k8s/infrastructure/controllers/external-dns/ext-dns-release.yaml
+++ b/k8s/infrastructure/controllers/external-dns/ext-dns-release.yaml
@@ -4,6 +4,8 @@ metadata:
   name: external-dns
   namespace: external-dns
 spec:
+  dependsOn:
+    - name: sealed-secrets
   releaseName: external-dns
   interval: 50m
   chart:
