--- a/k8s/monitoring/controllers/loki-stack/repository.yaml
+++ b/k8s/monitoring/controllers/loki-stack/repository.yaml
@@ -1,8 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: grafana
-  namespace: monitoring
+  name: grafana-charts
 spec:
-  interval: 24h
+  interval: 120m0s
   url: https://grafana.github.io/helm-charts
